# python-project-template

./: .gitignore  ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Containerfile  HISTORY.md  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-test.txt  requirements.txt  setup.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  init.sh  release_message.sh  rename_project.sh  template.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/templates/flask/: .env  README.md  apply.sh  requirements-test.txt  requirements.txt  settings.toml  wsgi.py
.github/templates/flask/module/: __init__.py  __main__.py  base.py  models.py
.github/templates/flask/module/ext/: admin.py  auth.py  commands.py
.github/templates/flask/module/ext/restapi/: __init__.py  resources.py
.github/templates/flask/module/ext/webui/: __init__.py  views.py
.github/templates/flask/module/ext/webui/templates/: index.html  product.html
.github/templates/flask/tests/: conftest.py  test_api.py
.github/workflows/: main.yml  release.yml  rename_project.yml
project_name/: __init__.py  __main__.py  base.py  cli.py
tests/: test_base.py
