[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project_name"
version = "0.1.0"
description = "project_description"
readme = "README.md"
requires-python = ">=3.6"
authors = [
    { name = "author_name", email = "author_email@exemplo.com" }
]
# homepage = "https://github.com/author_name/project_urlname/"

# Dependências de produção (adicione suas dependências aqui quando necessário)
dependencies = []

# Scripts de entrada
[project.scripts]
project_name = "project_name.__main__:main"

# Dependências opcionais para desenvolvimento e testes
[project.optional-dependencies]
test = [
    "pip-tools",
    "pytest",
    "coverage",
    "flake8",
    "black",
    "isort",
    "pytest-cov",
    "mypy",
    "gitchangelog",
]
